Add web socket and sock js integration and organize exception classes